--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "node dist/index.js",
+     "build": "npx tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "typescript": "^4.5.4",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
